# object-deps-report

./: .copier-answers.yml  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/object_deps_report/: __init__.py  cmake_file_generator.py  index.cmake  main.py
src/object_deps_report/_spl_core/: __init__.py  cmake_file.py  spl_paths.py
tests/: test_cmake_file_generator.py
