[project]
name = "object-deps-report"
version = "0.1.0"
description = "An spl-core build extension that generates the object-file dependency graph report using clanguru"
readme = "README.md"
license = "MIT"
authors = [
  { name = "cuinixam", email = "cuinixam@gmail.com" },
]
requires-python = "<4.0,>=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
]

dependencies = [
  "clanguru>=0.20",
  "typer>=0,<1",
  "py-app-dev>=2.1,<3",
]

[project.scripts]
object_deps_report = "object_deps_report.main:app"

[dependency-groups]
dev = [
  "coverage>=7,<8",
  "pytest>=9,<10",
  "pytest-cov>=7,<8",
  "pypeline-runner>=1,<2",
  "pre-commit>=4,<5",
  "ruff>=0,<1",
]

[build-system]
requires = ["poetry-core>=2,<3"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "object_deps_report", from = "src" }]

[tool.ruff]
target-version = "py310"
line-length = 180
lint.select = [
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "S",   # flake8-bandit
  "F",   # pyflake
  "E",   # pycodestyle
  "W",   # pycodestyle
  "UP",  # pyupgrade
  "I",   # isort
  "RUF", # ruff specific
]
lint.ignore = [
  "D203",
  "D212",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D107",
  "D401",
]
lint.per-file-ignores."bootstrap.py" = ["UP006", "UP035", "S603", "D200", "D205", "D417"]
lint.per-file-ignores."setup.py" = ["D100"]
lint.per-file-ignores."conftest.py" = ["D100"]
lint.per-file-ignores."tests/**/*" = ["D100", "D101", "D102", "D103", "D104", "S101"]
lint.isort.known-first-party = ["object_deps_report", "tests"]

[tool.pytest.ini_options]
addopts = "-vv -Wdefault --cov=object_deps_report --cov-report=term-missing:skip-covered --cov-report=xml -s"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "@overload",
  "if TYPE_CHECKING",
  "raise NotImplementedError",
  'if __name__ == "__main__":',
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = ['setup.py']
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[tool.semantic_release]
allow_zero_version = true
version_toml = ["pyproject.toml:project.version"]
version_variables = [
  "src/object_deps_report/__init__.py:__version__",
]
build_command = """
pip install uv
uv lock
git add uv.lock
uv build
"""

[tool.semantic_release.changelog]
exclude_commit_patterns = [
  '''chore(?:\([^)]*?\))?: .+''',
  '''ci(?:\([^)]*?\))?: .+''',
  '''refactor(?:\([^)]*?\))?: .+''',
  '''style(?:\([^)]*?\))?: .+''',
  '''test(?:\([^)]*?\))?: .+''',
  '''build\((?!deps\): .+)''',
  '''Merged? .*''',
]

[tool.semantic_release.changelog.environment]
keep_trailing_newline = true

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.branches.noop]
match = "(?!main$)"
prerelease = true
